# harpi

./: .credentials  .env.example  .gitignore  .rules  AGENT.md  Dockerfile  Dockerfile.dev  Makefile  README.md  app.py  application.yml  credentials.py  debug_requirements.txt  docker-compose.dev.yml  docker-compose.yml  encrypt_credentials.py  encryption.py  export.py  fix-playwright.sh  gunicorn_config.py  harpi.py  pyproject.toml  pytest.ini  requirements.txt  run-dev.sh  run.sh  setup.cfg  tailwind.sh  teste.py  teste2.py
.github/: copilot-instructions.md
common/: botsync.py
docs/: INDEX.md
frontend/: .prettierignore  .prettierrc.json  bun.lockb  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1743865590241-38feb5f2bc5a8.mjs
frontend/src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts  store.tsx
frontend/src/api/: Api.ts  ApiClient.ts  ServerError.ts  api.tsx
frontend/src/components/: AnimatedOutlet.tsx  ExcalidrawCanvas.tsx  GuildControl.tsx  GuildList.tsx  LoopState.tsx  MusicCard.tsx  MusicList.tsx  Status.tsx  VoiceChannels.tsx
frontend/src/routes/: __root.tsx  about.tsx  canvas.tsx  index.tsx  settings.tsx  system.tsx
integration/: maritalk.py
models/: status.py
router/guild/: music.py
src/: __init__.py  discord_bot.py  harpi.py  websocket.py
src/HarpiLib/: HarpiBot.py  __init__.py  api.py  music_helpers.py  nested.py  say.py
src/HarpiLib/ai/: __init__.py  base.py  browser.py  gemini.py  tools.py
src/HarpiLib/audio/: __init__.py  test_tone_source.py
src/HarpiLib/dice/: __init__.py  dice_component.py  dice_parser.py
src/HarpiLib/math/: __init__.py  parser.py
src/HarpiLib/music/: mixer.py  soundboard.py
src/HarpiLib/musicdata/: __init__.py  ytmusicdata.py
src/HarpiLib/soundboard/: __init__.py  executor.py  models.py  preset_store.py  source_manager.py  websocket.py
src/api/: __init__.py  deps.py  guild.py  music.py  soundboard.py
src/bot/: harpi.py  iharpi.py
src/cogs/: __init__.py  ai.py  amigo.py  base.py  basic.py  dice.py  dice_cog.py  music.py  receive_audio.py  test.py  tts.py
src/cogs/tests/: required_tests.md
src/errors/: __init__.py  bad_link.py  nothingfound.py
src/harpi_lib/: api.py  harpi_bot.py  nested.py
src/harpi_lib/audio/: __init__.py  controller.py  mixer.py  test_tone_source.py  tone_source.py
src/harpi_lib/math/: __init__.py  parser.py
src/harpi_lib/music/: mixer.py  soundboard.py  ytmusicdata.py
src/harpi_lib/musicdata/: __init__.py
src/harpi_lib/services/: __init__.py  background_audio.py  music_queue.py  soundboard_graph.py  tts.py  voice_connection.py
src/harpi_lib/soundboard/: __init__.py  executor.py  preset_store.py  source_manager.py  websocket.py
src/models/: canvas.py  cog.py  guild.py
src/modules/: aternos.py  basic.py  chat.py  dice.py  music.py  tts.py
src/modules/errors/: bad_link.py
src/musicdata/: ytmusicdata.py
src/res/: __init__.py  amigo.py  basic.py  chat.py  dice.py  lol.py  music.py  tts.py
src/robsons/: hub.py
src/routers/: cogs.py  guild.py  music.py  system.py
src/services/: __init__.py  cog_manager.py
static/: decoration.aseprite  harp.css
static/css/: index.css  input.css  output.css
templates/: base.html  ficha.html  footer.html  header.html  home.html
templates/components/: bot_status.html  current_guild.html  guild_list.html  server_status.html
templates/icons/: pause.html  repeat-once.html  repeat.html  skip.html  stop.html
templates/pages/: music.html
tests/: conftest.py  harpi_test.py  lol_test.py  test_aternos.py  test_audio_controller.py  test_background_audio_service.py  test_chat.py  test_cog_management.py  test_deps.py  test_dice.py  test_dice_format.py  test_dice_parser.py  test_dice_roller.py  test_errors.py  test_graph_helpers.py  test_harpi_api.py  test_lolapi.py  test_mixer_source.py  test_music_helpers.py  test_music_queue_service.py  test_nested.py  test_preset_store.py  test_soundboard_controller.py  test_soundboard_graph_service.py  test_soundboard_models.py  test_tone_source.py  test_tts_service.py  test_voice_connection_service.py
tests/integration/: conftest.py  test_audio_pipeline.py  test_e2e_flow.py  test_real_user_flow.py
tests/modules/: dice.py  music_test.py
typings/discord/: __init__.pyi  abc.pyi  appinfo.pyi  channel.pyi  client.pyi  embeds.pyi  emoji.pyi  enums.pyi  errors.pyi  flags.pyi  gateway.pyi  guild.pyi  http.pyi  interactions.pyi  member.pyi  message.pyi  player.pyi  poll.pyi  presences.pyi  raw_models.pyi  role.pyi  shard.pyi  sku.pyi  soundboard.pyi  state.pyi  sticker.pyi  subscription.pyi  utils.pyi
typings/gtts/: __init__.pyi  accents.pyi  cli.pyi  lang.pyi  langs.pyi  tts.pyi  utils.pyi
ui/: .gitignore  Dockerfile  head  package.json  playwright.config.ts  prod.sh  run.sh  svelte.config.js  vite.config.ts
ui/scripts/: run-e2e.sh
ui/src/: app.html  hooks.server.ts
(+393 files in other folders)
