[project]
name = "harpi"
version = "0.1.0"
authors = [{ name = "TheSmileyDroid", email = "ghsilha@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "fastapi-cors>=0.0.6",
    "google-generativeai>=0.8.4",
    "gtts>=2.5.4",
    "langchain-google-genai>=2.0.10",
    "mcstatus>=12.0.1",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "discord.py[voice]>=2.5.2",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "safebag>=0.2.0",
    "strawberry-graphql[fastapi]>=0.271.1",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
    "wikipedia-api>=0.8.1",
    "yt-dlp>=2025.7.21",
    "jinja2>=3.1.6",
    "flask[async]>=3.1.2",
    "gunicorn>=23.0.0",
    "yt-dlp-ejs>=0.3.2"
]

[tool.pyright]
reportMissingTypeArgument = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff]
line-length = 79
ignore = [
    "PLR",
    "TRY",
    "EM",
    "CPY001",
    "G",
    "UP007",
    "D",
    "S101",
    "E501",
    "DTZ005",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
]
